# faj-todo-app

./: .gitignore  README.md  demo.py  pyproject.toml  test_features.py  test_functionality.py  test_modules.py
.specify/memory/: constitution.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
history/prompts/todo-console-app/: 2-create-todo-app-specification.spec.prompt.md  3-create-todo-app-development-plan.plan.prompt.md  4-implement-todo-app-core-features.implementation.prompt.md  5-generate-todo-app-tasks.tasks.prompt.md  6-complete-todo-app-implementation.implementation.prompt.md
specs/001-todo-intermediate-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-intermediate-features/checklists/: requirements.md
specs/001-todo-intermediate-features/contracts/: task-contracts.md
specs/1-todo-console-app/: 001-initial-spec.md  002-development-plan.md  tasks.md
specs/1-todo-console-app/checklists/: requirements.md
src/: main.py  models.py  storage.py  tasks.py  ui.py
src/todo_in_memory_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_integration.py  test_models.py  test_storage.py  test_tasks.py  test_ui.py
tests/integration/: test_main.py
tests/unit/: test_models.py  test_tasks.py  test_tasks_filter.py  test_tasks_search.py  test_tasks_sort.py
