[project]
name = "todo-in-memory-app"
version = "0.1.0"
description = "A simple, interactive command-line Todo application that stores tasks in memory"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Todo App Developer"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
todo-app = "src.main:main"